- GPR#109: new unboxing strategy for float and int references (Vladimir Brankov,
  review by Alain Frisch)

Runtime system:
- PR#6517: use ISO C99 types {,u}int{32,64}_t in preference to our homegrown
  types {,u}int{32,64}.
  (Xavier Leroy)
- PR#6760: closures evaluated in the toplevel can now be marshalled
  (Peter Zotov, review by Jacques-Henri Jourdan)

Standard library:
- PR#6390, GPR#36: expose Sys.{int_size,max_wosize} for improved js_of_ocaml portability
  (Hugo Heuzard)
* PR#6494: Add equal function in modules
  Bytes, Char, Digest, Int32, Int64, Nativeint, and String
  (Romain Calascibetta)
* PR#6524, GPR#79: Filename: Optional ?perms argument to open_temp_file
  (Daniel Bünzli, review by Jacques-Pascal Deplaix)
- PR#6577: improve performance of %L, %l, %n, %S, %C format specifiers
  (Alain Frisch)
- PR#6585: fix memory leak in win32unix/createprocess.c
- PR#6645, GPR#174: Guarantee that Set.add, Set.remove, Set.filter
  return the original set if no change is required (Alain Frisch,
  Mohamed Iguernelala)
- PR#6694, PR#6695: deprecate functions using ISO-8859-1 character set
  in Char, Bytes, String and provide alternatives using US-ASCII.
  (Peter Zotov)

Type system:
- PR#5545: Type annotations on methods cannot control the choice of abbreviation
* PR#6465: allow incremental weakening of module aliases (Jacques Garrigue).
  This is done by adding equations to submodules when expanding aliases.
  In theory this may be incompatible is some corner cases defining a module
  type through inference, but no breakage known on published code.
- PR#6593: Functor application in tests/basic-modules fails after commit 15405

Toplevel and debugger:
- PR#6468: toplevel now supports backtraces if invoked with OCAMLRUNPARAM=b
  (Peter Zotov and Jake Donham,
   review by Gabriel Scherer and Jacques-Henri Jourdan)

OCamlbuild:
- PR#6794, PR#6809: pass package-specific include flags when building C files
  (Jérémie Dimino, request by Peter Zotov)

Bug fixes: